WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
275024
[WebGPU] Vertex buffers used in a drawIndexed call are not validated for vertex step mode
https://bugs.webkit.org/show_bug.cgi?id=275024
Summary
[WebGPU] Vertex buffers used in a drawIndexed call are not validated for vert...
Mike Wyrzykowski
Reported
2024-06-01 20:39:00 PDT
[WebGPU] Vertex buffers used in a drawIndexed call are not validated for vertex step mode
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-01 20:39:17 PDT
radar://129058740
Mike Wyrzykowski
Comment 2
2024-06-01 21:36:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29424
EWS
Comment 3
2024-06-04 12:34:24 PDT
Committed
279708@main
(6d7020a4d480): <
https://commits.webkit.org/279708@main
> Reviewed commits have been landed. Closing PR #29424 and removing active labels.
Mike Wyrzykowski
Comment 4
2024-06-14 14:32:55 PDT
Reopened Bugzilla. Regressed validation,encoding,cmds,render test, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=275513
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug