[WebGPU] Vertex buffers used in a drawIndexed call are not validated for vertex step mode https://bugs.webkit.org/show_bug.cgi?id=275024 <radar://129058740>

Reviewed by Dan Glastonbury.

A vertex buffer must be at least the size of one vertex in any draw
call, if it is used by the shader.

* LayoutTests/fast/webgpu/regression/repro_274703-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_275024-expected.txt: Copied from LayoutTests/fast/webgpu/regression/repro_274703-expected.txt.
* LayoutTests/fast/webgpu/regression/repro_275024.html: Added.
* LayoutTests/fast/webgpu/regression/repro_275024b-expected.txt: Copied from LayoutTests/fast/webgpu/regression/repro_274703-expected.txt.
* LayoutTests/fast/webgpu/regression/repro_275024b.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::executePreDrawCommands):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executePreDrawCommands):

Canonical link: https://commits.webkit.org/279708@main